# AnyBenchmark

./: .gitignore  CMakeLists.txt  README.md  bTreeTuning.csv  boxPlotScript.R
TestingFramework/: CMakeLists.txt  anyBenchmark.pro  matrixMultTest.pro
TestingFramework/include/: benchmaker.h  constants.h  iTestObject.h
TestingFramework/src/: arrayMaster.h  benchmaker.cpp  benchmaker.h  iTestObject.h  main.cpp  matrixMultiplier.cpp  matrixMultiplier.h  recursiveMultiplier.cpp  recursiveMultiplier.h  regularMultiplier.cpp  regularMultiplier.h  testObject.h  transposedMultiplier.cpp
TestingFramework/src/pipelineHandlers/: benchmarkEvent.h  consoleWriter.cpp  consoleWriter.h  fileWriter.cpp  fileWriter.h  iEventHandler.h  pipelineHolder.cpp  pipelineHolder.h
TestingFramework/tests/binaryTree/: avlTree.cpp  avlTree.h  bTree.cpp  bTree.h  iTree.cpp  iTree.h  splayTree.cpp  splayTree.h  testTreeAdapter.cpp  testTreeAdapter.h  treeTestLauncher.h  vEBLayoutBinTree.cpp  vEBLayoutBinTree.h  vanEmdeBoasTree.cpp  vanEmdeBoasTree.h  vebLayout.cpp
TestingFramework/tests/matrixMultiplying/: matrixMultiplier.cpp  matrixMultiplier.h  multiplicationTestLauncher.h  recursiveMultiplier.cpp  recursiveMultiplier.h  regularMultiplier.cpp  regularMultiplier.h  transposedMultiplier.cpp  transposedMultiplier.h
